[gd_scene load_steps=25 format=3 uid="uid://cp3r6bogw8tnr"]

[ext_resource type="Texture2D" uid="uid://cbtm3e1l3e54v" path="res://Assets/Sprites/background.png" id="1_qdqot"]
[ext_resource type="Script" uid="uid://dopmay02ddm0s" path="res://Scripts/arrival.gd" id="1_rsxbb"]
[ext_resource type="TileSet" uid="uid://dqkwscxogdg5l" path="res://Assets/Sprites/tileset.tres" id="2_11o8a"]
[ext_resource type="PackedScene" uid="uid://btde3lk1m7uud" path="res://Scenes/Item/lying_item.tscn" id="5_e24px"]
[ext_resource type="PackedScene" uid="uid://xdgfshm0pl5k" path="res://Scenes/Move_Scenes/door.tscn" id="6_1ookr"]
[ext_resource type="Script" uid="uid://dod1hsui3fa1k" path="res://Scripts/tile_map.gd" id="6_6kqxj"]
[ext_resource type="Resource" uid="uid://b7mldsntmmomm" path="res://Resources/Item/Clues/clue_surat_sita_bank.tres" id="6_bkb2u"]
[ext_resource type="PackedScene" uid="uid://dcnjve3l7lvnf" path="res://Scenes/Shaders/shaders.tscn" id="7_qex7i"]
[ext_resource type="PackedScene" uid="uid://cnwagqa7gdp55" path="res://Scenes/Player/player.tscn" id="8_8obx6"]
[ext_resource type="Script" uid="uid://6n284ei2hjoc" path="res://Scripts/Testing/world_ui.gd" id="10_3n3jr"]
[ext_resource type="Texture2D" uid="uid://bc7feocroqlay" path="res://Resources/Inventory/inventory_open.tres" id="11_5hahv"]
[ext_resource type="Texture2D" uid="uid://e3prlt2utxqo" path="res://Resources/Inventory/inventory_close.tres" id="12_q3wf1"]
[ext_resource type="PackedScene" uid="uid://crvxkwfcdgxku" path="res://Scenes/Inventory/inventory_ui.tscn" id="13_3mt2s"]
[ext_resource type="Resource" uid="uid://cd5syxchsrgsc" path="res://Resources/Item/Clues/clue_kunci_kupu.tres" id="13_q3wf1"]
[ext_resource type="AudioStream" uid="uid://sjsd4jwaht3c" path="res://Assets/Audio/BGM/SFX tutup tas.mp3" id="14_k1rg4"]
[ext_resource type="AudioStream" uid="uid://bs10em2k7jxko" path="res://Assets/Audio/BGM/SFX buka tas.mp3" id="15_0v3x3"]
[ext_resource type="Texture2D" uid="uid://ow75lh8i7xjo" path="res://Assets/Textures/inventory-box.png" id="16_7rpdw"]
[ext_resource type="FontFile" uid="uid://6ik02l1yg1ii" path="res://Assets/Fonts/Fusion Pixel 10px Monospaced/fusion-pixel-10px-monospaced-zh_hans.otf" id="17_88e5p"]
[ext_resource type="PackedScene" uid="uid://c4r62wrijl4uu" path="res://Scenes/Item/highlight_item.tscn" id="18_hooyt"]
[ext_resource type="AudioStream" uid="uid://j2c1oqo3420" path="res://Assets/Audio/SFX back_Esc.mp3" id="19_s8js6"]
[ext_resource type="AudioStream" uid="uid://cafr3duw7wf27" path="res://Assets/Audio/SFX Drag item or ambil item.mp3" id="20_ea8ki"]
[ext_resource type="PackedScene" uid="uid://bqrs4u8bifvkc" path="res://Scenes/Menu/pause_menu.tscn" id="21_5hahv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e8dwi"]
texture = ExtResource("16_7rpdw")
region_rect = Rect2(16, 16, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mjwka"]
texture = ExtResource("16_7rpdw")
texture_margin_left = 30.0
texture_margin_top = 10.0
texture_margin_right = 30.0
texture_margin_bottom = 10.0
region_rect = Rect2(112, 16, 96, 96)

[node name="KamarJilly" type="Node2D"]
script = ExtResource("1_rsxbb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(328, 360)
scale = Vector2(1.32169, 1.8765957)
texture = ExtResource("1_qdqot")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_11o8a")
format = 2
layer_0/name = "Jalan"
layer_0/tile_data = PackedInt32Array(1048583, 65539, 2, 1114119, 131075, 1, 1179655, 131075, 2, 1245191, 131075, 1, 1310727, 65539, 1, 1441799, 131075, 2, 1048584, 131075, 2, 1048585, 65539, 2, 1114120, 65539, 1, 1179656, 65539, 2, 1114121, 131075, 1, 1179657, 131075, 2, 1245192, 65539, 1, 1310728, 131075, 1, 1245193, 131075, 1, 1310729, 131075, 2, 1376264, 131075, 2, 1441800, 65539, 2, 1376265, 131075, 1, 1441801, 131075, 2, 1048586, 131075, 2, 1048587, 65539, 2, 1114122, 65539, 1, 1179658, 65539, 2, 1114123, 131075, 1, 1179659, 131075, 2, 1245194, 65539, 1, 1310730, 65539, 2, 1245195, 131075, 1, 1310731, 131075, 2, 1376266, 65539, 1, 1441802, 65539, 2, 1376267, 131075, 1, 1441803, 131075, 2, 1048588, 131075, 2, 1048589, 65539, 2, 1114124, 65539, 1, 1179660, 65539, 2, 1114125, 131075, 1, 1179661, 131075, 2, 1245196, 65539, 1, 1310732, 65539, 2, 1245197, 131075, 1, 1310733, 131075, 2, 1376268, 65539, 1, 1441804, 65539, 2, 1376269, 131075, 1, 1441805, 131075, 2, 1048590, 131075, 2, 1048591, 65539, 2, 1114126, 65539, 1, 1179662, 65539, 2, 1114127, 131075, 1, 1179663, 131075, 2, 1245198, 65539, 1, 1310734, 65539, 2, 1245199, 131075, 1, 1310735, 131075, 2, 1376270, 65539, 1, 1441806, 65539, 2, 1376271, 131075, 1, 1441807, 131075, 2, 1048592, 131075, 2, 1048593, 65539, 2, 1114128, 65539, 1, 1179664, 65539, 2, 1114129, 131075, 1, 1179665, 131075, 2, 1245200, 65539, 1, 1310736, 65539, 2, 1245201, 131075, 1, 1310737, 131075, 2, 1376272, 65539, 1, 1441808, 65539, 2, 1376273, 131075, 1, 1441809, 131075, 2, 1048594, 131075, 2, 1048595, 65539, 2, 1114130, 65539, 1, 1179666, 65539, 2, 1114131, 131075, 1, 1179667, 131075, 2, 1245202, 65539, 1, 1310738, 65539, 2, 1245203, 131075, 1, 1310739, 131075, 2, 1376274, 65539, 1, 1441810, 65539, 2, 1376275, 131075, 1, 1441811, 131075, 2, 1048596, 65539, 2, 1048597, 131075, 2, 1114132, 65539, 1, 1179668, 65539, 2, 1114133, 131075, 1, 1179669, 131075, 2, 1245204, 65539, 1, 1310740, 65539, 2, 1245205, 131075, 1, 1310741, 131075, 2, 1376276, 65539, 1, 1441812, 65539, 2, 1376277, 131075, 1, 1441813, 131075, 2, 1376263, 65539, 2, 1507342, 65540, 1, 1572878, 65540, 2, 1507343, 131076, 1, 1572879, 131076, 2, 1441814, 65540, 2, 1376279, 131076, 1, 1441815, 131076, 2, 1376280, 65540, 1, 1441816, 65540, 2, 1441817, 131076, 2, 1245207, 65540, 1, 1310743, 65540, 2, 1310744, 65540, 2, 1114135, 65540, 2, 1179671, 65540, 2, 1048599, 65540, 1, 1048600, 65540, 1, 1048601, 131076, 1, 1179673, 131076, 2, 1376281, 131076, 1, 1310745, 131076, 2, 1245209, 131076, 1, 1245208, 65540, 1, 1179672, 65540, 2, 1114136, 65540, 1, 1114137, 131076, 1, 1376278, 65540, 1)
layer_1/name = "Object"
layer_2/name = "Non-Walkable"
layer_2/tile_data = PackedInt32Array(1114125, 327681, 3, 1245190, 262147, 5, 1179654, 262147, 5, 1114118, 262147, 5, 1048582, 262147, 5, 1441798, 262147, 5, 1507334, 262148, 18, 1048598, 589827, 5, 1114134, 589827, 5, 1179670, 589827, 5, 1507350, 458756, 9, 983046, 262147, 5, 983062, 589827, 5, 851974, 262148, 4, 917510, 262147, 5, 917511, 393219, 7, 917512, 393219, 7, 917521, 393219, 7, 917522, 393219, 7, 917523, 393219, 7, 917524, 393219, 7, 917525, 393219, 7, 851990, 458756, 4, 917526, 589827, 5, 1376262, 262144, 7, 1310726, 262144, 7, 917520, 327680, 5, 917519, 327680, 5, 917518, 327680, 5, 917517, 327680, 5, 917516, 327680, 5, 917515, 327680, 5, 917514, 327680, 5, 917513, 327680, 5, 1507349, 655364, 18, 1507348, 655364, 18, 1507347, 655364, 18, 1507346, 655364, 18, 1507345, 655364, 18, 1507344, 655364, 18, 1507341, 655364, 18, 1507340, 655364, 18, 1507339, 655364, 18, 1507338, 655364, 18, 1507337, 655364, 18, 1507336, 655364, 18, 1507335, 655364, 18, 1310742, 589828, 5, 1245206, 589828, 5, 851989, 458756, 4, 851988, 458756, 4, 851987, 458756, 4, 851986, 458756, 4, 851985, 458756, 4, 851984, 458756, 4, 851983, 458756, 4, 851982, 458756, 4, 851981, 458756, 4, 851980, 458756, 4, 851979, 458756, 4, 851978, 458756, 4, 851977, 458756, 4, 851976, 458756, 4, 851975, 458756, 4, 983047, 327684, 5, 983048, 327684, 5, 983049, 327684, 5, 983050, 327684, 5, 983051, 327684, 5, 983052, 327684, 5, 983053, 327684, 5, 983054, 327684, 5, 983055, 327684, 5, 983056, 327684, 5, 983057, 327684, 5, 983058, 327684, 5, 983059, 327684, 5, 983060, 327684, 5, 983061, 327684, 5, 1507351, 458756, 9, 1507352, 458756, 9, 1507353, 458756, 9, 1507354, 589828, 9, 1441818, 589828, 6, 1376282, 589828, 6, 1310746, 589828, 6, 1245210, 589828, 6, 1179674, 589828, 6, 1114138, 589828, 6, 1048602, 589828, 6, 983066, 589828, 6, 917530, 589828, 6, 851994, 589828, 4, 851991, 458756, 4, 851992, 458756, 4, 851993, 458756, 4, 917527, 327684, 5, 917528, 327684, 5, 917529, 327684, 5, 983065, 327684, 5, 983064, 327684, 5, 983063, 327684, 5)
layer_3/name = "Interact"
layer_3/tile_data = PackedInt32Array(983054, 720901, 10, 1048590, 720901, 11, 1114126, 720901, 12, 983055, 786437, 10, 1048591, 786437, 11, 1114127, 786437, 12, 983048, 5, 8, 1048584, 5, 9, 983049, 65541, 8, 1048585, 65541, 9, 917527, 786437, 0, 983063, 786437, 1, 1048599, 786437, 2, 917520, 851973, 9, 983056, 851973, 10, 1048592, 851973, 11, 983053, 458757, 10, 1048589, 458757, 11, 917524, 983045, 9, 983060, 983045, 10, 1048596, 983045, 11, 917525, 983045, 9, 983061, 983045, 10, 1048597, 983045, 11, 917523, 917509, 9, 983059, 917509, 10, 1048595, 917509, 11, 983065, 851973, 1, 1048601, 851973, 2, 1245207, 851973, 4, 1179671, 851973, 3, 917515, 7, 0, 983051, 7, 1)
layer_4/name = "Door"
layer_4/tile_data = PackedInt32Array(1507342, 458756, 18, 1507343, 524292, 18)
script = ExtResource("6_6kqxj")

[node name="LyingItem" parent="TileMap" instance=ExtResource("5_e24px")]
position = Vector2(129, 287)
item = ExtResource("6_bkb2u")

[node name="CanvasLayer" parent="." instance=ExtResource("7_qex7i")]
visible = false

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.13319641, 0.13319641, 0.13319638, 1)

[node name="Player" parent="." instance=ExtResource("8_8obx6")]
position = Vector2(336, 319)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(236, 319)
zoom = Vector2(2.5, 2.5)

[node name="Door5" parent="." instance=ExtResource("6_1ookr")]
position = Vector2(239.99998, 380)
rotation = -1.5707964
scale = Vector2(1.1156727, 1.6709411)
next_scene_path = "uid://bwb78ls7g2sjj"
entry_point_id = "KamarJilly"

[node name="SpawnPoint5" parent="." groups=["Lantai1Jilly"] instance=ExtResource("6_1ookr")]
position = Vector2(239, 347)
rotation = -1.5707964
scale = Vector2(0.425, 1.56)
script = null

[node name="InventoryCanvas" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("10_3n3jr")
icon_open = ExtResource("11_5hahv")
icon_close = ExtResource("12_q3wf1")
butterfly_key = ExtResource("13_q3wf1")

[node name="InventoryUI" parent="InventoryCanvas" instance=ExtResource("13_3mt2s")]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="InventoryCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="CloseInventorySFX" type="AudioStreamPlayer2D" parent="InventoryCanvas/MarginContainer"]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("14_k1rg4")

[node name="OpenInventorySFX" type="AudioStreamPlayer2D" parent="InventoryCanvas/MarginContainer"]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("15_0v3x3")
max_polyphony = 2

[node name="InventoryButton" type="Button" parent="InventoryCanvas/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_e8dwi")
icon = ExtResource("12_q3wf1")
icon_alignment = 1

[node name="AlertPopup" type="PanelContainer" parent="InventoryCanvas/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_mjwka")

[node name="Label" type="Label" parent="InventoryCanvas/MarginContainer/AlertPopup"]
layout_mode = 2
theme_override_fonts/font = ExtResource("17_88e5p")
text = "Fakta baru terungkap: Deskripsi Bukti Diperbarui!"

[node name="HighlightItem" parent="InventoryCanvas" instance=ExtResource("18_hooyt")]
visible = false

[node name="PutItemSFX" type="AudioStreamPlayer2D" parent="InventoryCanvas"]
unique_name_in_owner = true
stream = ExtResource("19_s8js6")

[node name="PickupSFX" type="AudioStreamPlayer2D" parent="InventoryCanvas"]
unique_name_in_owner = true
stream = ExtResource("20_ea8ki")

[node name="FadeOverlay" type="ColorRect" parent="InventoryCanvas"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = -28.0
offset_right = 37.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="PauseMenu" parent="." instance=ExtResource("21_5hahv")]
visible = false

[connection signal="body_entered" from="Door5" to="Door5" method="_on_body_entered"]
[connection signal="pressed" from="InventoryCanvas/MarginContainer/InventoryButton" to="InventoryCanvas" method="_on_inventory_button_pressed"]
